--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Update to Nightly
+      run: rustup default nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
