--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 [dependencies]
 itertools = "0.9"
 regex = { version = "1.4", features = ["pattern"] }
+
+[profile.release]
+debug = true
