--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 [dependencies]
 itertools = "0.9"
 regex = { version = "1.4", features = ["pattern"] }
+pest = "2.1"
+pest_derive = "2.1"
+lazy_static = "1.4"
 
 [dev-dependencies]
 proptest = "0.10.1"
